[package]
name = "tot-token"
version = "0.1.0"
description = "TaiOneToken (TOT) - Solana SPL Token-2022 with dynamic tax system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tot_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["token-2022"] }
spl-token-2022 = "0.6"
