[package]
name = "tws-asset"
version = "0.1.0"
description = "TWS Asset Program for Solana - Manages bunker assets with TaiOneToken integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tws_asset"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"



